--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sipankab
+DB_DATABASE=spk_perum_moora
 DB_USERNAME=root
 DB_PASSWORD=
 
